# usbclient

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
libusb-msvc/MS32/dll/: libusb-1.0.lib
libusb-msvc/MS32/static/: libusb-1.0.lib
libusb-msvc/MS64/dll/: libusb-1.0.lib
libusb-msvc/MS64/static/: libusb-1.0.lib
src/: main.cc
